tests/lean/parserPrio.lean.expected.out
[1, 2]
6
parserPrio.lean:26:7: error: ambiguous, possible interpretations 
  2 * 1
  
  1 :: List.nil
sorryAx ?m : ?m
[1, 2, 3]
